--- a/master_thesis/resources/index.html
+++ b/master_thesis/resources/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIS Simplified - Web Mapping Application</title>
-    <link rel="stylesheet" href="resources/ol/ol.css">
+    <link rel="stylesheet" href="ol/ol.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="map"></div>
-    <script src="resources/ol/ol.js"></script>
+    <script src="ol/ol.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
