--- a/my_app/index.html
+++ b/my_app/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Using OpenLayers with Vite</title>
+    <meta charset="UTF-8">
+    <title>Lund Map Service</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="map"></div>
-    <script type="module" src="./main.js"></script>
+    <div id="map" class="map"></div> <!-- Map container -->
+    <script type="module" src="./main.js"></script> <!-- Link to main.js -->
   </body>
 </html>
