return Lat/Lon instead of Lon/Lat

--- a/my_app/index.html
+++ b/my_app/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lund Web Mapping Application</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <div id="map"></div>
@@ -27,7 +26,7 @@
     <label><input type="checkbox" id="railroads-toggle"> Railroads </label>
   </div>
 
-  <div id="coordinates">Coordinates (Lon/Lat): <span id="coord-text">0, 0</span></div>
+  <div id="coordinates">Coordinates (Lat/Lon): <span id="coord-text">0, 0</span></div>
 
   <script type="module" src="main.js"></script>
 </body>
