add clicked coordinates tab

--- a/my_app/index.html
+++ b/my_app/index.html
@@ -26,6 +26,7 @@
     <label><input type="checkbox" id="railroads-toggle"> Railroads </label>
   </div>
 
+  <div id="clicked-coordinates">Clicked Coordinates: Lat/Lon: -, - <span class="copy-icon" id="copy-coord">📝</span></div>
   <div id="coordinates">Coordinates (Lat/Lon): <span id="coord-text">0, 0</span></div>
 
   <script type="module" src="main.js"></script>
