add remove_marker feature

--- a/my_app/index.html
+++ b/my_app/index.html
@@ -28,6 +28,7 @@
 
   <div id="clicked-coordinates">Clicked Coordinates (Lat/Lon): -, - <span class="copy-icon" id="copy-coord">📝</span></div>
   <div id="coordinates">Coordinates (Lat/Lon): <span id="coord-text">0, 0</span></div>
+  <button id="remove-marker">Remove Marker</button>
 
   <script type="module" src="main.js"></script>
 </body>
